--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,13 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: monospace
+}
+
+h1 {
+  font-size: 30px
+}
+
+h2 {
+  font-size: 24px
 }
