--- a/app/globals.css
+++ b/app/globals.css
@@ -9,11 +9,12 @@
 } */
 
 /* @media (prefers-color-scheme: dark) { */
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 24, 24, 24;
-    --background-end-rgb: 24, 24, 24;
-  }
+:root {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 24, 24, 24;
+  --background-end-rgb: 24, 24, 24;
+  --markdown-vh: calc(100vh - 96px) /* 96 = 2*48 (48 = height of navbar) */
+}
 /* } */
 
 ul{
@@ -92,8 +93,7 @@ h3 {
 }
 
 .logoDiv{
-  max-height: 80px
-  /* max-width: */
+  max-height: 48px;
 }
 
 .organizeIcon {
@@ -104,6 +104,24 @@ h3 {
   border-radius: 5px;
   border: 2px grey solid;
   margin: 5px; 
+}
+
+.tocOpenCloseIcon {
+  margin  : 5px;
+  width: 20px;
+  height: 20px;
+}
+
+.tocOpenCloseButton {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 5px;
+  border: 2px grey solid;
+  margin: 5px; 
+  width: 33px; /* 1 less because it looks better */
+  height: 34px;
+  /* (2px + 5 margin)* 2 = 14 + 20 (from above) = 34 */
 }
 
 .link {
@@ -145,6 +163,7 @@ td {
 
 #markdownContainer {
   overflow-y: scroll;
+  max-height: var(--markdown-vh)
 }
 
 @media print {
@@ -241,7 +260,7 @@ td {
 /* makes it so that when clicking on links it doesn't go behind stickied header */
 * {
   @media (min-height: 32em) {
-    scroll-margin-top: 80px;
+    scroll-margin-top: 0px; /* used to be 80, didn't like look of it */
   }
 }
 
@@ -256,7 +275,15 @@ td {
   background: #333333;
   overflow-y: scroll;
   min-width: 320px;
-  max-height: 800px;
+  max-height: var(--markdown-vh)
+}
+
+#closedNavBody {
+  width: 43px; /* 10 more than the chevron button */
+  background: #333333;
+  overflow-y: scroll;
+  min-width: 43px; /* 10 more than the chevron button */
+  max-height: var(--markdown-vh)
 }
 
 nav .tocnav  {
