--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 24, 24, 24;
   --background-end-rgb: 24, 24, 24;
-  --markdown-vh: calc(100vh - 96px) /* 96 = 2*48 (48 = height of navbar) */
+  --markdown-vh: calc(100vh - 48px) /* 96 = 2*48 (48 = height of navbar) */
 }
 /* } */
 
@@ -112,10 +112,17 @@ h3 {
   height: 20px;
 }
 
-.tocOpenCloseButton {
+.tocOpenCloseButtonBackground {
+  background-color: #3694F2;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
   position: absolute;
+  margin-bottom: 20px;
   bottom: 0;
   left: 0;
+}
+
+.tocOpenCloseButton {
   border-radius: 5px;
   border: 2px grey solid;
   margin: 5px; 
@@ -163,7 +170,9 @@ td {
 
 #markdownContainer {
   overflow-y: scroll;
-  max-height: var(--markdown-vh)
+  max-height: var(--markdown-vh);
+  margin: 0 auto;
+  margin-left: 10px;
 }
 
 @media print {
@@ -267,7 +276,6 @@ td {
 .wrapper{
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
 }
 
 #navBody {
@@ -275,14 +283,14 @@ td {
   background: #333333;
   overflow-y: scroll;
   min-width: 320px;
-  max-height: var(--markdown-vh)
+  max-height: var(--markdown-vh);
 }
 
 #closedNavBody {
-  width: 43px; /* 10 more than the chevron button */
+  width: 0px;
   background: #333333;
   overflow-y: scroll;
-  min-width: 43px; /* 10 more than the chevron button */
+  min-width: 0px;
   max-height: var(--markdown-vh)
 }
 
