--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  font-family: monospace
+  font-family: Inter
 }
 
 h1 {
@@ -116,7 +116,7 @@ h3 {
   background-color: #3694F2;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  position: absolute;
+  position: fixed;
   margin-bottom: 20px;
   bottom: 0;
   left: 0;
@@ -239,6 +239,12 @@ td {
   to find some other way to store this data, not in a table, it works but for how long (and at all on mobile?) */
 }
 
+@media screen and (max-width: 500px) {
+  .markdown table th {
+    max-width: 100vw;
+  }
+}
+
 .markdown td {
   border-top-width: 0px;
   border-bottom-width: 1px;
@@ -262,6 +268,12 @@ td {
   margin-bottom: 14px;
 }
 
+@media screen and (max-width: 900px) {
+  .markdown table {
+    max-width: 100vw;
+  }
+}
+
 .markdown thead {
   border-top-width: 0px;
 }
@@ -274,24 +286,35 @@ td {
 }
 
 .wrapper{
-  display: flex;
+  /* display: flex; */
   justify-content: center;
 }
 
 #navBody {
+  height: 100%;
+  position: fixed;
+  left: 0;
+  z-index: 10;
   width: 320px;
-  background: #333333;
+  /* background: #333333; */
+  background: rgba(51, 51, 51, 0.97);
   overflow-y: scroll;
   min-width: 320px;
   max-height: var(--markdown-vh);
+  transition: 0.5s;
 }
 
 #closedNavBody {
+  height: 100%;
+  position: fixed;
+  left: 0;
+  z-index: 10;
   width: 0px;
   background: #333333;
   overflow-y: scroll;
   min-width: 0px;
-  max-height: var(--markdown-vh)
+  max-height: var(--markdown-vh);
+  transition: 0.5s;
 }
 
 nav .tocnav  {
