--- a/app/globals.css
+++ b/app/globals.css
@@ -343,6 +343,7 @@ td {
   .navBody {
     width: 469px;
     min-width: 469px;
+    background: rgba(51, 51, 51, 0.97); /* mobile phone needs redeclaration here for some reason... */
   }
 
 }
