--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,10 @@ ul{
   list-style-position: inside;
 }
 
+.tocnav ul{
+  padding-left: 10px;
+}
+
 .navBar {
   list-style-type: none;
 }
@@ -112,7 +116,7 @@ h3 {
   height: 20px;
 }
 
-.tocOpenCloseButtonBackground {
+.tocClosedButtonBackground {
   background-color: #3694F2;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -121,6 +125,17 @@ h3 {
   bottom: 0;
   left: 0;
 }
+
+.tocOpenButtonBackground {
+  background-color: #3694F2;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  position: fixed;
+  margin-bottom: 20px;
+  bottom: 0;
+  left: 0;
+}
+
 
 .tocOpenCloseButton {
   border-radius: 5px;
@@ -290,56 +305,8 @@ td {
   justify-content: center;
 }
 
-@media screen and (max-width: 799px) {
-  .navBody {
-    height: 100%;
-    position: fixed;
-    left: 0;
-    width: 320px;
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.97), rgba(51, 51, 51, 0.97));
-    overflow-y: scroll;
-    min-width: 320px;
-    max-height: var(--markdown-vh);
-    transition: all 0.5s ease;
-  }
-
-  .closedNavBody {
-    height: 100%;
-    position: fixed;
-    left: 0;
-    width: 0px;
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.97), rgba(51, 51, 51, 0.97));
-    overflow-y: scroll;
-    min-width: 0px;
-    max-height: var(--markdown-vh);
-    transition: all 0.5s ease;
-  }
-}
-
-
-@media screen and (min-width: 800px) {
-
-  .navBody {
-    width: 320px;
-    background: #333333;
-    overflow-y: scroll;
-    min-width: 320px;
-    max-height: var(--markdown-vh);
-    transition: all 0.5s ease;
-  }
-
-  .closedNavBody {
-    width: 0px;
-    background: #333333;
-    overflow-y: scroll;
-    min-width: 0px;
-    max-height: var(--markdown-vh);
-    transition: all 0.5s ease;
-  }
-}
-
 nav .tocnav  {
-  min-width: 320px;
+  min-width: 20px;
   align-self: flex-start;
   position: -webkit-sticky;
   position: sticky;
@@ -453,6 +420,75 @@ a[href^="https://"]::after
   display: inline-block;
 }
 
+/* full sized screen */
+@media screen and (min-width: 800px) {
+
+  .navBody {
+    width: 320px;
+    background: #333333;
+    overflow-y: scroll;
+    min-width: 320px;
+    max-height: var(--markdown-vh);
+    transition: all 0.5s ease;
+  }
+
+  .closedNavBody {
+    width: 0px;
+    background: #333333;
+    overflow-y: scroll;
+    min-width: 0px;
+    max-height: var(--markdown-vh);
+    transition: all 0.5s ease;
+  }
+
+  .tocOpenButtonBackground {
+    left: calc(320px - 43px);
+    transition: 0.5s;
+  }
+
+  .tocClosedButtonBackground {
+    left: 0px;
+    transition: 0.5s;
+  }
+}
+
+/* not full sized, so overlay table of contents, but not mobile screen. */
+@media screen and (min-width: 470px) and (max-width: 799px) {
+  .navBody {
+    height: 100%;
+    position: fixed;
+    left: 0;
+    width: 320px;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.97), rgba(51, 51, 51, 0.97));
+    overflow-y: scroll;
+    min-width: 320px;
+    max-height: var(--markdown-vh);
+    transition: all 0.5s ease;
+  }
+
+  .closedNavBody {
+    height: 100%;
+    position: fixed;
+    left: 0;
+    width: 0px;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0.97), rgba(51, 51, 51, 0.97));
+    overflow-y: scroll;
+    min-width: 0px;
+    max-height: var(--markdown-vh);
+    transition: all 0.5s ease;
+  }
+
+  .tocOpenButtonBackground {
+    left: calc(320px - 43px);
+    transition: 0.5s;
+  }
+
+  .tocClosedButtonBackground {
+    left: 0px;
+    transition: 0.5s;
+  }
+}
+
 /* on mobile screens have side-nav fill entire screen. */
 @media screen and (max-width: 469px) {
   .navBody {
@@ -472,8 +508,13 @@ a[href^="https://"]::after
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0.97), rgba(51, 51, 51, 0.97));
   }
 
-  .tocnav ul{
-    padding-left: 30px; /* so close button doesn't overlay links */
+  .tocOpenButtonBackground {
+    left: calc(100% - 43px);
+    transition: 0.5s;
   }
 
+  .tocClosedButtonBackground {
+    left: 0px;
+    transition: 0.5s;
+  }
 }
