--- a/app/globals.css
+++ b/app/globals.css
@@ -453,6 +453,11 @@ a[href="#skybreaker-order"] {
   font-weight: 600;
 }
 
+a[href="#elsecaller-order"] {
+  color: #4493bf;
+  font-weight: 600;
+}
+
 
 a[href^="http"]::after,
 a[href^="https://"]::after
@@ -526,3 +531,29 @@ a[href^="https://"]::after
     transition: 0.5s;
   }
 }
+
+/* .footnote {
+  display: inline;
+  color: blue;
+  cursor: pointer;
+  position: relative;
+} */
+
+/* Style for the tooltip */
+/* .footnote:hover .tooltip {
+  display: block;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+  bottom: 100%;
+  left: 0;
+  margin-top: 10px;
+} */
